added new end-points; build script refactored;